# openpr

./: .dispatch_link  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prebuilt  LICENSE-MIT  PHASE4_EXECUTION_SUMMARY.txt  PHASE5_SUMMARY.txt  README.md  RUST_CODING_STANDARD.md  clippy.toml  deny.toml  docker-compose.yml  test-mcp-server.sh
.cargo/: config.toml
.github/workflows/: release-mcp.yml  release.yml
apps/api/: Cargo.toml
apps/api/src/: error.rs  main.rs  response.rs  webhook_trigger.rs
apps/api/src/entities/: activity.rs  ai_learning_record.rs  ai_participant.rs  appeal.rs  comment.rs  decision.rs  decision_audit_report.rs  decision_domain.rs  feedback_loop_link.rs  governance_audit_log.rs  governance_config.rs  impact_metric.rs  impact_review.rs  label.rs  mod.rs  notification.rs  project.rs  proposal.rs  proposal_comment.rs  proposal_issue_link.rs  proposal_template.rs  review_participant.rs  sprint.rs  trust_score.rs  trust_score_log.rs  user.rs  veto_event.rs  vetoer.rs  vote.rs  webhook.rs  work_item.rs  work_item_label.rs  workspace.rs  workspace_member.rs
apps/api/src/middleware/: admin.rs  auth.rs  bot_auth.rs  mod.rs
apps/api/src/routes/: activity.rs  admin.rs  ai_agent.rs  ai_callback.rs  appeal.rs  auth.rs  board.rs  bot.rs  comment.rs  decision.rs  decision_domain.rs  export.rs  governance.rs  governance_ext.rs  impact_review.rs  import.rs  issue.rs  label.rs  member.rs  mod.rs  my.rs  notification.rs  project.rs  proposal.rs  proposal_template.rs  search.rs  sprint.rs  trust_score.rs  upload.rs  veto.rs  webhook.rs  workflow.rs  workspace.rs
apps/api/src/services/: ai_task_service.rs  governance_audit_service.rs  impact_review_service.rs  mod.rs  permission_service.rs  trust_score_service.rs  veto_service.rs  workflow_service.rs
apps/mcp-server/: AGENTS.md  Cargo.toml  README.md
apps/mcp-server/src/: cli.rs  lib.rs  main.rs  protocol.rs  server.rs
apps/mcp-server/src/client/: mod.rs
apps/mcp-server/src/db/: comments.rs  labels.rs  members.rs  mod.rs  projects.rs  proposals.rs  sprints.rs  work_items.rs
apps/mcp-server/src/tools/: comments.rs  files.rs  labels.rs  members.rs  mod.rs  projects.rs  proposals.rs  search.rs  sprints.rs  work_items.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/platform/: Cargo.toml
crates/platform/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  logging.rs
docs/: API_ENDPOINTS_PHASE3.md  README.md  frontend-requirements.md
docs/architecture/: BASELINE_IMPLEMENTATION_PLAN.md
docs/prd/: PRD_MASTER.md  WORKSTREAM_ORCHESTRATION.md
docs/prd/workstreams/: WS1_product_domain.md  WS2_backend_api_mcp.md  WS3_data_platform.md  WS4_frontend_ux.md  WS5_qa_security_release.md
frontend/: Dockerfile  QUICKSTART.md  README.md  nginx-static-only.conf  nginx.conf  package.json  svelte.config.js  vite.config.ts
frontend/log/: changelog.md
frontend/log/done/: fix_frontend_api_response_shape_mismatch_2026-02-15.md  fix_phase2_issue_board_dragdrop_2026-02-14.md  fix_phase3_issue_detail_comments_activity_2026-02-14.md  fix_phase4_sprint_inbox_2026-02-14.md  fix_phase5_admin_settings_2026-02-15.md  fix_typescript_svelte_type_errors_2026-02-14.md  fix_workspace_inbox_error_handling_2026-02-14.md
frontend/log/task/: 2026-02-14_phase2_issue_board_dragdrop.md  2026-02-14_phase3_issue_detail_comments.md  2026-02-14_phase4_sprint_inbox.md  2026-02-14_typescript_svelte_type_errors_fix.md  2026-02-14_workspace_inbox_error_fix.md  2026-02-15_fix_frontend_api_response_shape_mismatch.md  2026-02-15_phase5_admin_settings.md
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: index.ts  theme.ts
frontend/src/lib/api/: activity.ts  admin.ts  ai-agents.ts  auth.ts  bots.ts  client.ts  comments.ts  governance-ext.ts  governance.ts  impact-reviews.ts  import-export.ts  issues.ts  labels.ts  members.ts  my.ts  notifications.ts  projects.ts  proposal-templates.ts  proposals.ts  search.ts  sprints.ts  trust.ts  veto.ts  webhooks.ts  workflows.ts  workspaces.ts
frontend/src/lib/components/: Avatar.svelte  Badge.svelte  BotIcon.svelte  Button.svelte  Card.svelte  EmptyState.svelte  FileUpload.svelte  ImageUpload.svelte  Input.svelte  IssueCreateModal.svelte  Modal.svelte  ProgressBar.svelte  SearchModal.svelte  Select.svelte  Tag.svelte  Textarea.svelte  Toast.svelte
frontend/src/lib/i18n/: en.json  (+3 more)
frontend/src/routes/: +layout.svelte  +page.svelte
log/: changelog.md
log/done/: chore_2026-02-13_add_frontend_scope_to_full_task_plan.md  chore_2026-02-13_bootstrap_full_project_foundation.md  chore_2026-02-13_create_frontend_phase1_mvp_outline.md  chore_2026-02-13_create_full_prd_and_subagent_workstreams.md  chore_2026-02-13_create_plane_full_task_checklist.md  fix_2026-02-13_api_add_serde_json_dependency.md
log/task/: task_2026-02-13_fix_api_serde_json_dependency.md  task_2026-02-13_foundation_bootstrap_full_project.md  task_2026-02-13_frontend_phase1_mvp_route_api_matrix.md  task_2026-02-13_full_prd_with_subagent_paths.md  task_2026-02-13_plane-rust-mcp_full_delivery_plan.md
migrations/: 0001_init.sql  0002_users.sql  0003_labels.sql  0004_sprints.sql  0005_webhooks.sql  0006_notifications.sql  0007_fulltext_search.sql  0008_admin_user_fields.sql  0009_notifications_schema_compat.sql  0010_issue_activity_notifications_compat.sql  0011_bot_user_and_webhook_fields.sql  0012_governance_phase1.sql  0013_governance_work_items_fields.sql  0014_proposal_comments_schema_compat.sql  0015_governance_phase2.sql  0016_governance_phase3.sql  0017_governance_phase3_hardening.sql  0018_governance_phase3_templates.sql  0019_governance_cycle_template_rapid.sql  0020_ai_tasks.sql  0021_fix_cascade.sql  0022_bot_tokens.sql  0023_work_item_identifier.sql  0024_workflow_config.sql
scripts/: backup-db.sh  benchmark.sh  bump-version.sh  clean.sh  dev-check.sh  dev-up.sh  e2e-test.sh  init-db.sh  restore-db.sh  start.sh  stop.sh  test-api.sh  test-mcp.sh  verify.sh
skills/openpr-mcp/: SKILL.md
skills/openpr-mcp/scripts/: mcp-regression.py  validate-mcp.sh
(+55 files in other folders)
