[workspace]
resolver = "2"
members = [
  "apps/api",
  "apps/worker",
  "apps/mcp-server",
  "crates/platform",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["trace", "cors", "compression-gzip", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
jsonwebtoken = "9"
bcrypt = "0.16"
