[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
platform = { path = "../../crates/platform" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
