[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[[bin]]
name = "list-tools"
path = "src/bin/list-tools.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
chrono.workspace = true
platform = { path = "../../crates/platform" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
