[package]
name = "mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mcp_server"
path = "src/lib.rs"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[[bin]]
name = "list-tools"
path = "src/bin/list-tools.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64 = "0.22"
clap.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
