[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
sea-orm.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
serde_json.workspace = true
temp-env = "0.3"

[lints]
workspace = true
